Fixed issues where default animations were not showing on front end; Where Colorbox links to has been made more specific.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -322,6 +322,16 @@ article.page:hover,
 		color: $white;
 	}
 	
+	a.more-link:link,
+	a.more-link:visited {
+		color: $primary-text-color;
+	}
+	
+	a.more-link:hover,
+	a.more-link:focus {
+		color: $black;
+	}
+	
 	.material-icons {
 		color: $white;
 	}
